--- a/gb/16/10/29/n8442318.md
+++ b/gb/16/10/29/n8442318.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>安全专家：中共黑客试图攻击美台国防会议</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/10/fotolia_57986975.jpg" />
 <h6>美国网络安全专家说，中共黑客十月初对参加美台国防工业会议的人员发动网络攻击。(Fotolia)
 </h6>
 <hr>
-	<p>【大纪元2016年10月29日讯】（大纪元记者吴英编译报导）美国网络安全专家说，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E9%BB%91%E5%AE%A2.md#1">中共黑客</a>十月初对参加<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%8F%B0%E5%9B%BD%E9%98%B2%E5%B7%A5%E4%B8%9A%E4%BC%9A%E8%AE%AE.md#1">美台国防工业会议</a>的人员发动网络攻击。</p>
-<p>美台商会（U.S.-Taiwan Business Association）主办的“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%8F%B0%E5%9B%BD%E9%98%B2%E5%B7%A5%E4%B8%9A%E4%BC%9A%E8%AE%AE.md#1">美台国防工业会议</a>”（U.S.-Taiwan Defense Industry Confer）十月初在弗吉尼亚州威廉斯堡（Williamsburg）召开，出席人员包括国防部官员、工业界代表、安全专家及智库学者，总计172位，来自台湾的代表近75人。</p>
+	<p>【大纪元2016年10月29日讯】（大纪元记者吴英编译报导）美国网络安全专家说，中共黑客十月初对参加美台国防工业会议的人员发动网络攻击。</p>
+<p>美台商会（U.S.-Taiwan Business Association）主办的“美台国防工业会议”（U.S.-Taiwan Defense Industry Confer）十月初在弗吉尼亚州威廉斯堡（Williamsburg）召开，出席人员包括国防部官员、工业界代表、安全专家及智库学者，总计172位，来自台湾的代表近75人。</p>
 <p>《美国之音》28日报导，华盛顿网络安全公司Volexity创办人史蒂文．阿德尔（Steven Adair）表示，黑客攻击是以一个内含恶意软件的中文钓鱼邮件，要求收件人打开邮件，并借此进入连接计算机网络的系统。</p>
 <p>美台商会副会长马珞丹（Lotta Danielson）表示，该商会多年来都是黑客攻击的目标，对网路攻击特别提高警觉，因此在收到可疑电邮时立即通知与会代表。</p>
 <p>马珞丹告诉《美国之音》记者，该钓鱼电子邮件“针对台湾方面的国防工业人士，收到该邮件的人，有些出席会议，有些没有参加会议，我立即发现它是可疑的。”马珞丹已将该可疑邮件交给安全专家。</p>
@@ -18,45 +18,35 @@
 <p>文章说，由于近年来台湾面临的网络攻击增加，国防部计划在军队内部建立一个特别的网络安全单位。台湾方面表示，大陆黑客已经渗透国防、外交、空中交通管制和通信系统等，规模已达“准战争水平”。</p>
 <p>责任编辑：林妍</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/21/n4601047.md#1">台总统大选前中共网攻加剧 行政院：没少过</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/29/n7786519.md#1">美国钢铁公司指控中共黑客盗窃其轻钢专利</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/6/11/n7988276.md#1">美不起眼小商家计算机 成打击中共黑客利器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/7/3/n8062129.md#1">美官员首次证实：奥习协议后中共黑客减少</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/21/n4601047.md#1">台总统大选前中共网攻加剧 行政院：没少过</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/29/n7786519.md#1">美国钢铁公司指控中共黑客盗窃其轻钢专利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/11/n7988276.md#1">美不起眼小商家计算机 成打击中共黑客利器</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/3/n8062129.md#1">美官员首次证实：奥习协议后中共黑客减少</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9819782.md#1" target="_blank">布拉格共产主义受难者纪念碑背后故事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/26/n9322928.md#1" target="_blank">一位法轮功学员家属想要说的话</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/8/n10624963.md#1" target="_blank">捡纸鸣冤、“反毛”凉鞋与“毛语录仗”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20年前 澳洲西人为法轮功赴京上访（下）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14035789.md#1">南希?里根的最佳角色（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14030367.md#1">【古道人生】他为何能从一个贱丐做到水陆提督</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044414.md#1">英国姊妹转生原父母的双胞胎女儿 再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043385.md#1">【未解之谜】J-Rod秘密基地的外星顾问</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041411.md#1">在酒店饮酒延误朝见  怎么还能受重用成为重臣？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045197.md#1">【未解之谜】释迦座下神通第一 目犍连</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046780.md#1">【马克时空】中情局搅动风云 习近平攻台或泡汤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046701.md#1">【新闻大破解】美盟印太安全一体化 围堵中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044734.md#1">王友群：习近平遭遇火箭军司令们的背叛？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045151.md#1">火箭军司令和政委撤换 证实外界传闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045078.md#1">北京洪水暴涨桥梁被冲塌 灾情泛滥场面骇人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044708.md#1">《中国好声音》开播2分钟 网民吐槽 评论关闭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044675.md#1">周润发跑步不慎摔倒 自曝肋骨断裂呼吸都会痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045427.md#1">再遭微博疯传被家暴 林志玲首度回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045391.md#1">穿美人鱼长裙获9岁女儿赞 孙俪高调搞笑回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045182.md#1">李玟追思会众星悼念 丈夫及继女到场送别</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036183.md#1">漱口水害你蛀牙、口臭？ 医师建议5种替代方案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045039.md#1">长途坐车养成这个习惯 可能会救你一命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14044841.md#1">2026年美国房价涨多少？高盛这样预测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14044806.md#1">【美食天堂】凉拌拍黄瓜做法～超级简单～美味清爽！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044045.md#1">茶道艺术的空寂之美 耐人追寻的茶香味</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272135.md#1">长大的女孩：法度加入神韵的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269975.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（下）医院惊魂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268258.md#1">【古道人生】地师为富家卜穴 为何最终给了佃户之子？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272001.md#1">【未解之谜】细思极恐 AI接管人类倒计时？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267444.md#1">德不配位必有危 宝马也需有德人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272764.md#1">【新闻大破解】G7升级批中共 和平峰会各国选边</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273913.md#1">【马克时空】莱茵金属为乌克兰打造新防空炮</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14272933.md#1">【新闻大家谈】中共上调养老金 惹骂声一片</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272757.md#1">中国富豪流失全球居首 大多移民哪四国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272482.md#1">三中全会前要全党噤声 分析指中共岌岌可危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273702.md#1">演唱会被投诉唱粤语歌 张学友：我来自香港</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272172.md#1">宣传片被拍得脸歪嘴斜 胡歌不禁公开吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272141.md#1">甄子丹动作替身张磊因心脏病猝逝 终年39岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273664.md#1">冷脸面对中共央视直播 女星周也被指踢到钢板</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272210.md#1">安洁莉娜裘莉盛装走红毯 15岁小女儿紧相随</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272483.md#1">日本作家谈文化差异 一个地名让台湾人笑翻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273234.md#1">人死时大脑会发生什么事？ 医生这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271007.md#1">桑叶茶是长寿茶 清肺祛肝火 3类人不宜多喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271291.md#1">长时间戴降噪和无线耳机 是如何损害听力的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272384.md#1">为什么有些人看到亮光会打喷嚏？</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/29/n8442318.htm">安全专家：中共黑客试图攻击美台国防会议</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/16/10/29/n8442318.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/29/n8442318.htm">安全专家：中共黑客试图攻击美台国防会议</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/16/10/29/n8442318.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
